Enum "transaction_type" {
  "open"
  "close"
  "deposit"
  "withdrawal"
  "dividend"
  "interest"
  "split"
}

Table "instruments" {
  "instrument_id" bpchar(20) [pk, not null]
  "name" varchar [unique, not null]
  "asset_class" varchar [not null]
  "internal_ticker" varchar [unique, not null]
}

Table "instrument_attributes" {
  "instrument_id" bpchar(20) [not null]
  "field" varchar [not null]
  "value" varchar [not null]

  Indexes {
    (instrument_id, field) [pk, type: btree, name: "instrument_attributes_pkey"]
  }
}

Table "sources" {
  "name" varchar [pk, not null]
  "priority" int4 [not null]
}

Table "observations" {
  "instrument_id" bpchar(20) [not null]
  "field" varchar [not null]
  "date" date [not null]
  "source" varchar [not null]
  "value" numeric(19,5) [not null]

  Indexes {
    (instrument_id, field, date, source) [pk, type: btree, name: "observations_pkey"]
    (field, date, instrument_id) [type: btree, name: "idx_obs_field_date"]
    (instrument_id, field, date) [type: btree, name: "idx_obs_lookup"]
  }
}

Table "updates" {
  "instrument_id" bpchar(20) [not null]
  "field" varchar [not null]
  "source" varchar [not null]
  "frequency" varchar [not null]
  "last_update" date [not null]

  Indexes {
    (instrument_id, field, source) [pk, type: btree, name: "updates_pkey"]
    (source, frequency, last_update) [type: btree, name: "idx_updates_due_scan"]
    (source, frequency, instrument_id, field) [type: btree, name: "idx_updates_source_frequency_instrument"]
  }
}

Table "ingest_failures" {
  "instrument_id" bpchar(20) [not null]
  "field" varchar [not null]
  "source" varchar [not null]
  "error_timestamp" timestamptz [not null]
  "error_message" varchar

  Indexes {
    (instrument_id, field, source, error_timestamp) [pk, type: btree, name: "ingest_failures_pkey"]
  }
}

Table "identifiers" {
  "instrument_id" bpchar(20) [not null]
  "source" varchar [not null]
  "ext_id" varchar [not null]

  Indexes {
    (instrument_id, source) [pk, type: btree, name: "identifiers_new_pkey"]
    (instrument_id, source, ext_id) [type: btree, unique, name: "identifiers_new_instrument_id_source_ext_id_key"]
    (source, ext_id) [type: btree, name: "idx_identifiers_source_extid"]
  }
}

Table "fields" {
  "name" varchar [pk, not null]
  "scale" numeric(12,4) [not null]
  "fx_conversion" varchar
}

Table "units" {
  "code" bpchar(3) [pk, not null]
  "scale" numeric(10,7) [not null]
  "instrument_id" bpchar(20)
}

Table "instrument_units" {
  "instrument_id" bpchar(20) [not null]
  "unit" bpchar(3) [not null]
  "start_date" date [not null]
  "end_date" date [not null, default: '9999-12-31']

  Checks {
    `start_date < end_date` [name: 'ck_instrument_units_dates']
  }

  Indexes {
    (instrument_id, start_date) [pk, type: btree, name: "instrument_units_pkey"]
    (instrument_id, `daterange(start_date`, ` end_date`, ` '[)'::text)`) [type: gist, name: "ex_instrument_units_no_overlap"]
    (instrument_id, start_date, end_date) [type: btree, name: "idx_instrument_units_lookup"]
  }
}

Table "portfolio_activity" {
  "pf_id" varchar(20) [not null, note: 'Portfolio identifier (instrument_id).']
  "type" transaction_type [not null, note: 'Transaction type: one of open, close, deposit, withdrawal, dividend, interest, split.']
  "broker" text [not null, note: 'Broker through which the transaction was executed (e.g. etoro).']
  "ts" timestamptz [not null, note: 'Transaction timestamp in UTC.']
  "position_id" text [note: 'Broker-assigned position identifier, shared across all transactions for the same position. Null for cash transactions.']
  "instrument_id" varchar(20) [note: 'Internal instrument_id. Null for cash transactions.']
  "units" numeric [note: 'Number of units involved. Positive for opens, negative for closes. Null for cash transactions.']
  "fee" numeric [note: 'Transaction fee in USD, always non-negative.']
  "cashflow_usd" numeric [note: 'Net cash impact in USD. Positive = cash in (deposit, dividend), negative = cash out (open, withdrawal). Includes possible fees.']
  "notes" text [note: 'Optional free-text notes for this transaction.']

  Indexes {
    (pf_id, type, ts, instrument_id) [type: btree, name: "idx_portfolio_activity_holdings"]
  }
}

Ref "identifiers_new_instrument_id_fkey":"instruments"."instrument_id" < "identifiers"."instrument_id"

Ref "identifiers_new_source_fkey":"sources"."name" < "identifiers"."source"

Ref "ingest_failures_instrument_id_fkey":"instruments"."instrument_id" < "ingest_failures"."instrument_id"

Ref "ingest_failures_source_fkey":"sources"."name" < "ingest_failures"."source"

Ref "instrument_attributes_instrument_id_fkey":"instruments"."instrument_id" < "instrument_attributes"."instrument_id"

Ref "fk_instrument_units_instrument":"instruments"."instrument_id" < "instrument_units"."instrument_id"

Ref "fk_instrument_units_unit":"units"."code" < "instrument_units"."unit"

Ref "fk_field":"fields"."name" < "observations"."field"

Ref "observations_instrument_id_fkey":"instruments"."instrument_id" < "observations"."instrument_id"

Ref "observations_source_fkey":"sources"."name" < "observations"."source"

Ref "fk_portfolio_activity_instrument":"instruments"."instrument_id" < "portfolio_activity"."instrument_id"

Ref "fk_portfolio_activity_pf_id":"instruments"."instrument_id" < "portfolio_activity"."pf_id"

Ref "fk_instrument":"instruments"."instrument_id" < "units"."instrument_id"

Ref "fk_updates_field":"fields"."name" < "updates"."field"

Ref "updates_instrument_id_fkey":"instruments"."instrument_id" < "updates"."instrument_id"

Ref "updates_source_fkey":"sources"."name" < "updates"."source"
